<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android_Eclipse_Projects</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="parser_name">ParserTest</string>
    <string name="xml_parser_name">Xml Parser</string>
    <string name="local_sax">Local Sax</string>
    <string name="server_sax">Server Sax</string>
    <string name="pull">Pull</string>
    <string name="dom">DOM</string>
    <string name="factory_base">Factory Base Func</string>
    <string name="fragment_test_name">FragmentTest</string>
    <string name="web_activity">WebActivity</string>
    <string name="json_parser_name">Json Parser</string>
    <string name="gson">Gson</string>
    <string name="json">Json</string>

</resources>